Package.json actualizado para ejecutar front y back con un solo comando

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --no-hmr",
+    "tfg": "concurrently \"ng serve -o --no-hmr\" \"cd ../backend/database && source venv/bin/activate && python3 manage.py runserver\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@google/genai": "^0.7.0",
+    "concurrently": "^9.1.2",
     "crypto-js": "^4.2.0",
     "marked": "^15.0.7",
     "rxjs": "~7.8.0",
